style: fix layout shift screen lg to sm

--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,17 @@ button:hover {
   background: blue;
 }
 
+#canvasBall {
+  background: lightgray;
+  height: 100vh;
+  width: 100vw;
+  object-fit: auto;
+  /* grid-column-start: 1; */
+  /* grid-column-end: 2; */
+  /* grid-row-start: 1; */
+  /* grid-row-end: 2; */
+}
+
 #canvasNeuron {
   background: black;
   min-height: 100vh;
@@ -46,25 +57,15 @@ button:hover {
   object-fit: contain;
   /* grid-column-start: 3; */
   /* grid-column-end: -1; */
-  grid-row-start: 2;
-  grid-row-end: -1;
-}
-
-#canvasBall {
-  background: lightgray;
-  grid-column-start: 1;
-  min-height: 100vh;
-  width: 100%;
-  object-fit: contain;
-  grid-column-end: 3;
-  grid-row-start: 1;
-  grid-row-end: 2;
+  /* grid-row-start: 3; */
+  /* grid-row-end: 5; */
 }
 
 #app {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr, minmax(33%, 1fr);
+  /* grid-template-columns: 1fr; */
+  /* grid-template-rows: 1fr, minmax(33%, 1fr); */
+  /* grid-template-rows: repeat(5, 1fr); */
   /* grid-template-rows: 1fr, auto; */
 }
 
@@ -72,18 +73,24 @@ button:hover {
   #app {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(33%, 1fr));
-    grid-template-rows: 1fr, minmax(33%, 1fr);
+    /* grid-template-rows: repeat(auto-fill, minmax(50%, 1fr)); */
   }
 
   #canvasBall {
-    grid-row-start: 1;
-    grid-row-end: 2;
+    /* grid-row-start: 1; */
+    /* grid-row-end: 2; */
+    /* width: 100vw; */
+    width: 100%;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    /* object-fit: contain; */
   }
 
   #canvasNeuron {
     grid-column-start: 3;
-    grid-column-end: -1;
-    grid-row-start: 1;
-    grid-row-end: 2;
+    grid-column-end: 4;
+
+    /* grid-row-start: 1; */
+    /* grid-row-end: 2; */
   }
 }
